css/room_details.css
.container {
  text-align: left;
}

.room_img {
  width: 100%;
}

.main_img {
  width: 100%;
}

.secondary_img {
  width: calc(25% - 8px);
  margin: 4px;
  height: auto;
  opacity: 0.5;

  transition: opacity 0.3s;
}

.secondary_img:hover {
  opacity: 0.8;
}

.secondary_img.active {
  opacity: 1;
}

.secondary_img:first-child {
  margin-left: 0;
}

.room_info {
  width: 100%;
  margin: 16px;
}

.room_name {
  color: var(--primary_color);
}

.room_description {
  margin-top: 8px;
  margin-bottom: 16px;
}

